--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>counter</title>
-    <link rel="stylesheet" href="/style.css" />
+    <link rel="stylesheet" href="/Counter-Application/style.css" />
   </head>
   <body>
     <div class="container">
@@ -20,6 +20,6 @@
       </div>
     </div>
 
-    <script src="/index.js"></script>
+    <script src="/Counter-Application/index.js"></script>
   </body>
 </html>
